--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <div class="card">
-        <img src="C:\Users\giovanni\Downloads\minhafoto.png" alt="Minha foto" class="profile-img">
+        <img src="minhafoto.png" alt="Minha foto" class="profile-img">
         <h1>Giovanni Cardia Silva</h1>
         <h4><strong>Estudante de Análise e Desenvolvimento de Sistemas na Fatec</strong>.</4>
         <p>Focado em mudar de vida através da programação!!</p>
