Ajustes para ver no celular

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
         <a  href="https://github.com/GiovanniSilva21" target="_blank" class="botao github">
             </i> GitHub
         </a>
+        <div>
+            <a class="botao-desafio"> Me chama no zap</a>
+        </div>
     </div>
 
 </body>
