o site agora está resposivo, e foi criado animações no CSS, e adicionado o README

--- a/index.html
+++ b/index.html
@@ -14,19 +14,16 @@
         <h1>Giovanni Cardia Silva</h1>
         <h4><strong>Estudante de Análise e Desenvolvimento de Sistemas na Fatec</strong>.</4>
         <p>Focado em mudar de vida através da programação!!</p>
-        <a href="#" class="botao">Ver meus projetos</a>
-        <a  href="https://wa.me/5511964776787" target="_blank" class="botao whatsapp">
+        <a href="#" target="_blank" class="botao projetos">Ver meus projetos</a>
+        <a href="https://wa.me/5511964776787" target="_blank" class="botao whatsapp">
             <i class="fab fa-whatsapp"></i> WhatsApp 
         </a>
-        <a  href="https://www.linkedin.com/in/giovannicardia/" target="_blank" class="botao linkedin">
+        <a href="https://www.linkedin.com/in/giovannicardia/" target="_blank" class="botao linkedin">
             <i class="fab fa-linkedin"></i> LinkedIn
         </a>
-        <a  href="https://github.com/GiovanniSilva21" target="_blank" class="botao github">
+        <a href="https://github.com/GiovanniSilva21" target="_blank" class="botao github">
             </i> GitHub
         </a>
-        <div>
-            <a class="botao-desafio"> Me chama no zap</a>
-        </div>
     </div>
 
 </body>
